<resources>
    <string name="app_name">InventoryApp</string>

    <!-- Title for the activity to add a new book -->
    <string name="editor_activity_title_new_product">Add a Book</string>

    <!-- Title for the activity to edit an existing book -->
    <string name="editor_activity_title_edit_product">Edit Book</string>

    <!-- Label for editor menu option to save product and leave editor -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new book has been successfully inserted -->
    <string name="editor_insert_book_successful">Book saved</string>

    <!-- Toast message in editor when new book has failed to be inserted -->
    <string name="editor_insert_book_failed">Error with saving book</string>

    <!-- Toast message in editor when the user didn't insert a product name -->
    <string name="editor_insert_book_name_failed">You need to insert a product name!</string>

    <!-- Toast message in editor when the user didn't insert a product price -->
    <string name="editor_insert_book_price_failed">You need to insert a product price!</string>

    <!-- Toast message in editor when the user didn't insert quantity, default 0 -->
    <string name="editor_insert_quantity_failed">You didn\'t insert quantity, so I set it on 0!</string>

    <!-- Toast message in editor when the user didn't insert supplier name -->
    <string name="editor_insert_supplier_name_failed">You need to insert supplier name!</string>

    <!-- Toast message in editor when the user didn't insert supplier phone number -->
    <string name="editor_insert_supplier_phone_number_failed">You need to insert supplier phone number!</string>

    <!-- Toast message in editor when current book has failed to be updated -->
    <string name="editor_update_book_failed">Error with updating book</string>

    <!-- Toast message in editor when current book has been successfully updated -->
    <string name="editor_update_book_successful">Book updated</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current book was successfully deleted -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current book -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for name field in the editor -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for price field in the editor -->
    <string name="hint_product_price">Price</string>

    <!-- Units for price (euro) -->
    <string name="unit_euro">€</string>

    <!-- Label for category quantity in the editor -->
    <string name="category_quantity">Quantity</string>

    <!-- Text hint for quantity field in the editor -->
    <string name="hint_quantity">Quantity</string>

    <!-- Label for supplier category information in the editor -->
    <string name="category_supplier">Supplier</string>

    <!-- Text hint for supplier name field in the editor -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier phone number field in the editor -->
    <string name="hint_supplier_phone_number">Phone Number</string>

    <!-- TextView for Book Name in ListView -->
    <string name="text_book_name">Book Name</string>

    <!-- TextView for Book price in ListView -->
    <string name="text_book_price">20</string>
    <string name="text_book_euro">euro</string>

    <!-- TextView for Book Quantity in ListView -->
    <string name="text_book_quantity">Quantity:</string>
    <string name="text_book_quantity_number">5</string>

    <!-- Text for Button SALE -->
    <string name="button_text_sale">sale</string>

    <!-- Text for Button "increase" -->
    <string name="button_text_plus">+</string>

    <!-- Text for Button "decrease" -->
    <string name="button_text_minus">-</string>

    <!-- Text for Button ORDER -->
    <string name="button_text_order">order\nbook</string>

    <!-- Title text for the empty view -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- Toast message in MainActivity when user wants to decrease quantity below 0 -->
    <string name="out_of_stock">Out of stock!</string>

    <!-- Toast message in EditorActivity when user wants to decrease quantity below 0, by clicking minus button -->
    <string name="button_minus_zero">0 is the minimal quantity!</string>

</resources>
