<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Product Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Product Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <!-- Input field -->
        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_quantity"
            android:inputType="number" />

    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Supplier Phone Number field -->
            <EditText
                android:id="@+id/edit_supplier_phone_number"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>